cmake_minimum_required (VERSION 3.1)
project (DGTest)
set (CMAKE_CXX_STANDARD 14)
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
find_package(OpenCL REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${OpenCL_INCLUDE_DIRS} ${OpenCL_INCLUDE_DIRS}/Headers ${OpenCV_INCLUDE_DIRS})
include_directories(/opt/rocm/mivisionx/include)
link_directories(/opt/rocm/mivisionx/lib)
add_library(annmodule SHARED annmodule.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4.2 -mf16c -std=c++11")
target_link_libraries(annmodule openvx vx_nn pthread)
set(TARGET_CPP UserInterface.cpp DGtest.cpp)
add_executable(DGTest main.cpp ${TARGET_CPP})
target_link_libraries(DGTest openvx vx_nn pthread annmodule ${OpenCV_LIBRARIES})